--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,12 @@
 .main {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: row;
+  
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  /*width: 100%;*/
+  flex:1;
+  background-color: #282c34;
 }
 
 .description {
