--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,10 @@
 :root {
-  --max-width: 1100px;
+  --max-width: 100%;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
+/*
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -38,10 +38,12 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+  */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
+    /*
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
@@ -70,6 +72,7 @@
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
+    */
   }
 }
 
@@ -81,18 +84,21 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
   overflow-x: hidden;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+  /*
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    */
+    background:#282c34;
 }
 
 a {
